--- a/manifest/catalogue.yml
+++ b/manifest/catalogue.yml
@@ -44,9 +44,10 @@ spec:
           httpGet:
             path: /health
             port: 8080
+          initialDelaySeconds: 60
           periodSeconds: 10
           successThreshold: 1
-          timeoutSeconds: 10
+          timeoutSeconds: 15
       volumes:
         - name: tmp-volume
           emptyDir:
